tests/fixtures/pass/inferred_copy_i32.sali
let identity(value: i32): i32 = value

let main(): i32 = {
  let value = 21
  identity(value) + value
}
